--- a/render.yaml
+++ b/render.yaml
@@ -6,10 +6,9 @@ services:
     env: docker
     dockerfilePath: Dockerfile
     plan: free
-    autoDeploy: true
+    autoDeploy: false
     envVars:
       - key: SESSION_ID
-        sync: false
         required: true
       - key: AUTO_LIKE_STATUS
         required: true
