--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     envVars:
       - key: SESSION_ID
         required: true
-        value:""
+        value:"sophia-md~"
       - key: AUTO_LIKE_STATUS
         required: true
         value: "false"
