--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "SOPHIA-MD",
-  "version": "1.2.2",
+  "version": "3.0.0",
   "description": "WhatsApp bot inspired by sophia",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 delete SOPHIA-MD; pm2 start index.js --attach --name SOPHIA-MD",
+    "start": "pm2 start . --attach --name SOPHIA-MD",
     "run": "pm2 start . --deep-monitoring --attach --name SOPHIA-MD",
     "stop": "pm2 stop SOPHIA-MD",
     "restart": "pm2 restart SOPHIA-MD",
@@ -16,34 +16,33 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "^6.7.13",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
-    "assemblyai": "^4.8.0",
+    "assemblyai": "^4.23.0",
     "atob": "2.1.2",
-    "axios": "^1.7.7",
-    "chance": "^1.1.12",
-    "dotenv": "^16.4.7",
-    "express": "^4.18.2",
+    "axios": "^1.13.4",
+    "baileys": "^7.0.0-rc.9",
+    "better-sqlite3": "^12.6.2",
+    "chance": "^1.1.13",
+    "cheerio": "^1.2.0",
+    "dotenv": "^17.2.4",
+    "express": "^5.2.1",
     "fluent-ffmpeg": "^2.1.3",
-    "form-data": "^4.0.1",
-    "jimp": "^0.16.13",
-    "js-beautify": "^1.15.3",
-    "jsdom": "^25.0.1",
-    "link-preview-js": "^3.0.12",
+    "form-data": "^4.0.5",
+    "jimp": "^1.6.0",
+    "js-beautify": "^1.15.4",
+    "jsdom": "^28.0.0",
+    "libphonenumber-js": "^1.12.36",
     "lowdb": "^7.0.1",
-    "module-alias": "^2.2.3",
+    "module-alias": "^2.3.4",
     "moment": "^2.30.1",
-    "mongodb": "^5.8.1",
-    "mongoose": "^7.4.4",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
-    "node-webpmux": "^3.2.0",
-    "pg": "^8.13.1",
-    "pm2": "^5.4.3",
+    "node-webpmux": "^3.2.1",
+    "pg": "^8.18.0",
+    "pm2": "^6.0.14",
     "punycode": "^2.3.1",
     "read-line": "^0.1.2",
-    "socks-proxy-agent": "^8.0.5",
     "unzipper": "^0.12.3"
   },
   "_moduleAliases": {
