--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "better-sqlite3": "^12.6.2",
     "chance": "^1.1.13",
     "cheerio": "^1.2.0",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "fluent-ffmpeg": "^2.1.3",
@@ -42,6 +43,7 @@
     "pg": "^8.18.0",
     "pm2": "^6.0.14",
     "punycode": "^2.3.1",
+    "qrcode": "^1.5.4",
     "read-line": "^0.1.2",
     "unzipper": "^0.12.3"
   },
